# ExpDxLib

Exp01/: settings.gradle
Exp01/app/: build.gradle
Exp01/app/src/androidTest/java/com/ozateck/mydxlib01/: ExampleInstrumentedTest.java
Exp01/app/src/main/: AndroidManifest.xml
Exp01/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Exp01/app/src/main/cpp/main/: BaseScene.cpp  BaseScene.h  BoardGrid.cpp  BoardGrid.h  BtnBase.cpp  BtnBase.h  BtnToggle.cpp  BtnToggle.h  CtlDpad.cpp  CtlDpad.h  Firework.cpp  Firework.h  GameManager.cpp  GameManager.h  LoadingMarker.cpp  MazeManager.cpp  MazeManager.h  MsgHopper.cpp  MsgHopper.h  RankingLine.cpp  RankingLine.h  RankingView.cpp  RankingView.h  SceneBase.cpp  SceneBase.h  SceneGame.cpp  SceneGame.h  ScenePreload.cpp  ScenePreload.h  SceneResult.cpp  SceneResult.h  SceneTitle.cpp  SceneTitle.h  ScoreBar.cpp  ScoreBar.h  ScoreHopper.cpp  ScoreHopper.h  SpriteBase.cpp  SpriteBase.h  SpriteChara.cpp  (+27 more)
Exp01/app/src/main/cpp/utility/: UtilDebug.cpp  UtilDebug.h  UtilDx.cpp  UtilGraph.cpp  UtilJNI.cpp  UtilJNI.h  UtilJson.cpp  UtilLabel.cpp  UtilLabel.h  UtilLocalSave.cpp  UtilLocalSave.h  UtilMath.cpp  UtilMath.h  UtilSound.cpp  UtilSound.h  Utility.h  Vec2.cpp  Vec2.h
Exp01/app/src/main/java/com/ozateck/chickader/: MainActivity.java
Exp01/app/src/main/java/com/ozateck/mydxlib01/: MainActivity.java
Exp01/app/src/main/res/values/: strings.xml  themes.xml
Exp01/app/src/main/res/values-night/: themes.xml
Exp01/app/src/test/java/com/ozateck/mydxlib01/: ExampleUnitTest.java
Exp02/app/: build.gradle  proguard-rules.pro
Exp02/app/src/androidTest/java/com/ozateck/chickader/: ExampleInstrumentedTest.java
Exp02/app/src/main/: AndroidManifest.xml
Exp02/app/src/main/assets/json/: sample.json
Exp02/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Exp02/app/src/main/cpp/main/: BoardGrid.cpp  BoardGrid.h  BtnBase.cpp  BtnBase.h  BtnToggle.cpp  BtnToggle.h  CtlDpad.cpp  CtlDpad.h  GameManager.cpp  GameManager.h  LoadingMarker.cpp  LoadingMarker.h  SceneBase.cpp  SceneBase.h  SceneGame.cpp  SceneGame.h  ScenePreload.cpp  ScenePreload.h  SceneResult.cpp  SceneResult.h  SceneTitle.cpp  SceneTitle.h  SpriteBase.cpp  SpriteBase.h  SpriteBozu.cpp  SpriteBozu.h  SpriteChara.cpp  SpriteChara.h  SpriteChick.cpp  SpriteChick.h  SpriteChicken.cpp  SpriteChicken.h  SpriteDancer.cpp  SpriteDancer.h  SpriteEnemy.cpp  SpriteEnemy.h  SpriteFrames.cpp  SpriteFrames.h  SpriteHiyo.cpp  SpriteHiyo.h  (+12 more)
Exp02/app/src/main/cpp/utility/: UtilDebug.cpp  UtilDebug.h  UtilDx.cpp  UtilDx.h  UtilGraph.cpp  UtilGraph.h  UtilJNI.cpp  UtilJNI.h  UtilJson.cpp  UtilJson.h  UtilLabel.cpp  UtilLabel.h  UtilLocalSave.cpp  UtilLocalSave.h  UtilMath.cpp  UtilMath.h  UtilSound.cpp  UtilSound.h  Utility.h
Exp02/app/src/main/java/com/ozateck/chickader/: CustomLog.java  HttpConnector.java  MainActivity.java
Exp02/app/src/main/res/layout/: activity_main.xml
Exp02/app/src/main/res/values/: strings.xml
Exp02/gradle/wrapper/: gradle-wrapper.properties
ExpTest/: settings.gradle
ExpTest/app/: build.gradle
ExpTest/app/src/main/: AndroidManifest.xml
ExpTest/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ExpTest/app/src/main/res/values/: strings.xml  themes.xml
ExpTest/app/src/main/res/values-night/: themes.xml
ExpTest/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
